--- a/index.html
+++ b/index.html
@@ -45,19 +45,9 @@
           <div class="about-col-2">
       
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate sint doloremque iusto blanditiis fugit exercitationem,
-                accusantium libero aspernatur nobis, asperiores officiis modi
-                ratione adipisci praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate sint doloremque iusto blanditiis fugit exercitationem,
-                accusantium libero aspernatur nobis, asperiores officiis modi
-                ratione adipisci praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate sint doloremque iusto blanditiis fugit exercitationem,
-                accusantium libero aspernatur nobis, asperiores officiis modi
-                ratione adipisci praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate sint doloremque iusto blanditiis fugit exercitationem,
-                accusantium libero aspernatur nobis, asperiores officiis modi
-                ratione adipisci praesentium!
+              Nutrition is a critical aspect of maintaining good health and well-being. It refers to the process by which our bodies obtain and utilize the necessary nutrients from the food we consume. A balanced and nutritious diet plays a pivotal role in supporting various bodily functions, including growth, development, energy production, and overall disease prevention.
+
+              The essential nutrients required for optimal health can be broadly categorized into macronutrients and micronutrients. Macronutrients include carbohydrates, proteins, and fats, which are needed in relatively large quantities to provide energy and support bodily functions. Micronutrients, on the other hand, encompass vitamins and minerals, which are essential in smaller amounts for various physiological processes, such as immune function, bone health, and antioxidant defense.
             </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('menu1')">
@@ -129,23 +119,23 @@
         <h1 class="sub-title">More Menues...</h1>
         <div class="work-list">
           <div class="work">
-            <img src="21.jpg" alt="" />
+            <img src="Fruits.jpg" alt="" />
             <div class="layer">
-              <h3>Fish thali</h3>
+              <h3>Fruits</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
                 dolorem magni veritatis autem dolore. Quidem vitae modi dolores
                 repudiandae doloribus!
               </p>
               <a href="#">
-                <img src="9.JPG" alt="" />
+                <img src="Fruits.jpg" alt="" />
               </a>
             </div>
           </div>
           <div class="work">
-            <img src="22.jpg" alt="" />
+            <img src="Dryfruits.jpg" alt="" />
             <div class="layer">
-              <h3>Aluvadi</h3>
+              <h3>Dryfruits</h3>
               <p>
                 is a small coastal town in the Konkan region of Maharashtra,
                 known for its beaches, villas, and beautiful scenery. Alibag is
@@ -153,14 +143,14 @@
                 Pune.
               </p>
               <a href="#">
-                <img src="9.JPG" alt="" />
+                <img src="Dryfruits.jpg" alt="" />
               </a>
             </div>
           </div>
           <div class="work">
-            <img src="23.jpg" alt="" />
+            <img src="Juice.jpg" alt="" />
             <div class="layer">
-              <h3>Aamras Puri</h3>
+              <h3>Juice</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Voluptate sint doloremque iusto blanditiis fugit exercitationem,
@@ -168,7 +158,7 @@
                 ratione adipisci praesentium!
               </p>
               <a href="#">
-                <img src="9.JPG" alt="" />
+                <img src="Juice.jpg" alt="" />
               </a>
             </div>
           </div>
