--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 rows="6"
                 placeholder="Your Message"
               ></textarea>
-              <button type="submit" class="btn btn2">submit</button>
+              <button type="Submit" class="btn btn2">Submit</button>
             </form>
 
           </div>
