reset button created

--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
                 rows="6"
                 placeholder="Your Message"
               ></textarea>
-              <button type="submit" class="btn btn2">submit</button>
+              <button type="Submit" class="btn btn2">Submit</button>
+              <button type="Reset" id="reset" class="btn btn2">Reset</button>
             </form>
 
           </div>
