--- a/index.html
+++ b/index.html
@@ -51,62 +51,58 @@
             </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('menu1')">
-                BreakFast Menu
+                Nutritional Supplements
               </p>
               <p class="tab-links active-link" onclick="opentab('menu2')">
-                Meals Menu
+                Food Safety Tools
               </p>
               <p class="tab-links active-link" onclick="opentab('menu3')">
-                Sea Food
+                Healthy Snacks
               </p>
               <p class="tab-links active-link" onclick="opentab('menu4')">
-                Breads
+                Wellness Kits
               </p>
               <p class="tab-links active-link" onclick="opentab('menu5')">
-                Dosa
+                Allergen-Free Products
               </p>
             </div>
             <div class="tab-contents active-tab" id="menu1">
               <ul>
-                <li><span>Idli</span><br />Rs 20/-</li>
-                <li><span>Pohe</span><br />Rs 30/-</li>
-                <li><span>Vada pav</span><br />Rs 50/-</li>
-                <li><span>Masala vada</span><br />Rs 50/-</li>
+                <li><span>- Vitamins and Minerals</span><br />
+                <li><span>- Herbal Supplements</span><br />
+                <li><span>- Protein Powders</span><br />
+
               </ul>
             </div>
             <div class="tab-contents active-tab" id="menu2">
               <ul>
-                <li><span>Ghee Rice</span><br />Rs 100/-</li>
-                <li><span>Dal Tadka</span><br />Rs 100/-</li>
-                <li><span>Moong And Palak Khichdi</span><br />Rs 100/-</li>
-                <li>
-                  <span>Paneer</span><br />
-                  Rs 100/-
-                </li>
+                <li><span>- Food Thermometers</span><br />
+                <li><span>- Storage Containers (BPA-free, food-grade)</span><br />
+                <li><span>- Allergen-free Cooking Utensils</span><br />
+        
               </ul>
             </div>
             <div class="tab-contents active-tab" id="menu3">
               <ul>
-                <li><span>Mandeli Fry</span><br />Rs 200/-</li>
-                <li><span>Paplet - Pomfret</span><br />Rs 200/-</li>
-                <li><span>Bangra - Mackerel (seasonal)</span><br />Rs 200/-</li>
-                <li><span>Kekada - Crab</span><br />Rs 200/-</li>
+                <li><span>- Nut and Seed Mixes</span><br />
+                <li><span>- Dried Fruits</span><br />
+                <li><span>- Low-sugar Protein Bars</span><br />
+
               </ul>
             </div>
             <div class="tab-contents active-tab" id="menu4">
               <ul>
-                <li><span>Appam</span><br />Rs 40/-</li>
-                <li><span>Chapati</span><br />Rs 20/-</li>
-                <li><span>Jwarichi Bhakri</span><br />Rs 30/-</li>
-                <li><span>Tandalachi Bhakri</span><br />Rs 40/-</li>
+                <li><span>- Detox Kits</span><br />
+                  <li><span>- Immune-Boosting Bundles</span><br />
+                  <li><span>- Weight Management Kits</span><br />
               </ul>
             </div>
             <div class="tab-contents active-tab" id="menu5">
               <ul>
-                <li><span>Plain Dosa</span><br />Rs 50/-</li>
-                <li><span>Masala Dosa</span><br />Rs 50/-</li>
-                <li><span>Mysore Masala Dosa</span><br />Rs 80/-</li>
-                <li><span>Masala Uttapam</span><br />Rs 60/-</li>
+                <li><span>- Gluten-Free Foods</span><br />
+                <li><span>- Dairy-Free Alternatives</span><br />
+                <li><span>- Nut-Free Snacks</span><br />
+
               </ul>
             </div>
           </div>
