--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
             <div class="layer">
               <h3>Fruits</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                dolorem magni veritatis autem dolore. Quidem vitae modi dolores
-                repudiandae doloribus!
+                Fruits are nutrient-rich foods that offer a variety of essential vitamins and minerals. They are particularly high in vitamin C, which supports the immune system, and vitamin A, important for vision and skin health.
               </p>
               <a href="#">
                 <img src="Fruits.jpg" alt="" />
@@ -133,10 +131,7 @@
             <div class="layer">
               <h3>Dryfruits</h3>
               <p>
-                is a small coastal town in the Konkan region of Maharashtra,
-                known for its beaches, villas, and beautiful scenery. Alibag is
-                very popular as a weekend getaway from the cities of Mumbai and
-                Pune.
+                Dry fruits, such as almonds, walnuts, raisins, and apricots, offer a range of health advantages. Packed with essential nutrients like vitamins, minerals, and antioxidants, dry fruits contribute to overall well-being. 
               </p>
               <a href="#">
                 <img src="Dryfruits.jpg" alt="" />
@@ -148,10 +143,7 @@
             <div class="layer">
               <h3>Juice</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptate sint doloremque iusto blanditiis fugit exercitationem,
-                accusantium libero aspernatur nobis, asperiores officiis modi
-                ratione adipisci praesentium!
+                Juices, when consumed in moderation and as part of a balanced diet, offer certain advantages. Fruit and vegetable juices are rich in essential vitamins, minerals, and antioxidants, providing a convenient way to boost nutrient intake. 
               </p>
               <a href="#">
                 <img src="Juice.jpg" alt="" />
