--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#menu">Menu</a></li>
+            <li><a href="menu.html">Menu</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="Store.html">Store</a></li>
             
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
