--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="container">
         <div class="row">
           <div class="contact-left">
-            <h1 class="sub-title">Contact Me</h1>
+            <h1 class="sub-title">Contact Us</h1>
 
             <p><i class="fa-solid fa-paper-plane"></i>nutrisafe@gmail.com</p>
             <p><i class="fa-solid fa-phone"></i>8875963942</p>
