animation added to from

--- a/form.html
+++ b/form.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+
     <div>
         <title>User Information Form</title>
     </div>
@@ -12,6 +16,8 @@
     <h2>User Information Form</h2>
 </header>
 <body>
+
+    
 
     <form id="userForm" action="process-form.php" method="post" onsubmit="return validateForm()">
 
