--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           </ul>
           <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
+        <button class="regbtn3"  onclick="window.location='form.html'"><b>Login / Register</b></button>
         <div class="header-text">
           <h1>
             <span>NUTRISAFE</span> <br>
