Stores Button Created

--- a/index.html
+++ b/index.html
@@ -110,7 +110,22 @@
         </div>
       </div>
     </div>
-
+       <!-------------Store-------------------->
+    <div id="contact">
+      <div class ="container">
+      <div class="row">
+       <div class"contact-left">
+        <h1 class="sub-title">Stores</h1>
+         </div>
+        </div>
+       </div>
+      </div>
+      <a href="#" class="btn2">Safe Harvest</a>
+      <a href="#" class="btn2">Pure Provision</a>
+      <a href="#" class="btn2">Secure Supplies</a>
+      <a href="#" class="btn2">Nutri Safeway</a>
+      <a href="#" class="btn2">Nourish Mart</a>
+      <a href="#" class="btn2">Vitality Goods</a> 
     <div id="aboutme">
       <div class="container">
         <h1 class="sub-title">More Menues...</h1>
@@ -121,8 +136,7 @@
               <h3>Fruits</h3>
               <p>
                 Fruits are nutrient-rich foods that offer a variety of essential vitamins and minerals. They are particularly high in vitamin C, which supports the immune system, and vitamin A, important for vision and skin health.
-              </p>
-              <a href="#">
+              </p>              
                 <img src="Fruits.jpg" alt="" />
               </a>
             </div>
@@ -155,7 +169,7 @@
         <a href="#" class="btn">See more ...</a>
       </div>
     </div><hr><br><br><br><br>
-
+    
     <!------------ contact ------------- -->
 
     <div id="contact">
