--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     <!-- ----------------------------------- -->
 
     <script>
+      alert("Hello!");
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbzvkXQzpOOr-zPRuVHZLikBjnF4fEtBwQSw0Ji0FhX9Zhs6kfReV7x_9ng-xG_PRnNE/exec";
       const form = document.forms["submit-to-google-sheet"];
