--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <li><a href="#about">About</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="Store.html">Store</a></li>
+            <li><a href="#Stores">Stores</a></li>
             
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
           <i class="fa-solid fa-bars" onclick="openmenu()"></i>
-
+          <button class="regbtn3"  onclick="window.location='report.html'"><b>Report on product</b></button>
           <button class="regbtn3"  onclick="window.location='form.html'"><b>Login / Register</b></button>
         </nav>
 
@@ -117,10 +117,10 @@
       </div>
     </div>
        <!-------------Store-------------------->
-    <div id="contact">
+    <div id="Stores">
       <div class ="container">
       <div class="row">
-       <div class"contact-left">
+       <div class="contact-left">
         <h1 class="sub-title">Stores</h1>
          </div>
         </div>
