--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="Store.html">Store</a></li>
+            <li><a href="#store">Store</a></li>
             
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
@@ -117,7 +117,7 @@
       </div>
     </div>
        <!-------------Store-------------------->
-    <div id="contact">
+    <div id="store">
       <div class ="container">
       <div class="row">
        <div class"contact-left">
@@ -257,7 +257,7 @@
     <!-- ----------------------------------- -->
 
     <script>
-      alert("Hello!");
+     
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbzvkXQzpOOr-zPRuVHZLikBjnF4fEtBwQSw0Ji0FhX9Zhs6kfReV7x_9ng-xG_PRnNE/exec";
       const form = document.forms["submit-to-google-sheet"];
