--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="javascript" href="server.js">
     <title>NUTRISAFE</title>
     <link rel="stylesheet" href="style.css" />
     <script
@@ -30,9 +31,6 @@
           <button class="regbtn3"  onclick="window.location='report.html'"><b>Report on product</b></button>
           <button class="regbtn3"  onclick="window.location='form.html'"><b>Login / Register</b></button>
         </nav>
-
-        
-        
 
         <div class="header-text">
           <h1>
