--- a/index.html
+++ b/index.html
@@ -145,13 +145,10 @@
           </div>
          </div>
         </div>
-      <a href="#" class="btn2">Milk</a>
-      <a href="#" class="btn2">Dry Fruits</a>
-      <a href="#" class="btn2">Paneer</a>
-      <a href="#" class="btn2">...</a>
-      <a href="#" class="btn2">...</a>
-      <a href="#" class="btn2">...</a>
-      <a href="#" class="btn2">...</a>
+      <a href="#" class="btn2" onclick="window.location='fruit.html'">Fruits</a>
+      <a href="#" class="btn2" onclick="window.location='dryfruits.html'">Dry Fruits</a>
+      <a href="#" class="btn2" onclick="window.location='milk.html'">Milk</a>
+
            
     <div id="aboutme">
       <div class="container">
