--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="header-text">
           <h1>
             <span>NUTRISAFE</span> <br>
-            Menu page
+            Products
           </h1>
         </div>
       </div>
